# streamsnapper

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
.github/: release-config.yaml  release-config.yml
.github/workflows/: ci.yaml  publish_to_pypi.yaml  pypi.yaml  release.yaml  release.yml  release_to_pypi.yaml
src/streamsnapper/: __init__.py  core.py  exceptions.py  functions.py  logger.py  scraper.py  utils.py
src/streamsnapper/models/: __init__.py  audio.py  subtitle.py  video.py
streamsnapper/: __init__.py  downloader.py  exceptions.py  functions.py  merger.py  scraper.py  streamsnapper.py  youtube.py
tests/: all.py
tests/assets/: ytdlp_data.json
