[project]
name = "streamsnapper"
version = "0.4.0"
description = "Extract and analyze YouTube video streams with intelligent quality selection, language fallback, and comprehensive metadata retrieval"
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [
    {name = "henrique-coder", email = "henriquemoreira10fk@gmail.com"}
]
maintainers = [
    {name = "henrique-coder", email = "henriquemoreira10fk@gmail.com"}
]
keywords = [
    "stream",
    "snapper",
    "scraper",
    "downloader",
    "merger",
    "youtube",
    "youtube-music",
    "media",
    "video",
    "audio"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "yt-dlp[default]>=2025.12.8",
]

[dependency-groups]
dev = [
    "rich>=14.2.0",
]
lint = [
    "ruff>=0.14.10",
]

[project.urls]
Homepage = "https://github.com/henrique-coder/streamsnapper"
Documentation = "https://github.com/henrique-coder/streamsnapper/blob/main/README.md"
Repository = "https://github.com/henrique-coder/streamsnapper"
"Source Code" = "https://github.com/henrique-coder/streamsnapper"
"Bug Tracker" = "https://github.com/henrique-coder/streamsnapper/issues"
"Bug Reports" = "https://github.com/henrique-coder/streamsnapper/issues"
Issues = "https://github.com/henrique-coder/streamsnapper/issues"
Changelog = "https://github.com/henrique-coder/streamsnapper/releases"
Releases = "https://github.com/henrique-coder/streamsnapper/releases/latest"
Download = "https://pypi.org/project/streamsnapper"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
